# liquidglass0

./: .gitignore  AGENTS.md  ARCHITECTURE.md  Cargo.toml  IMPLEMENTS.md  LIQUID_GLASS.md  MCP_DESIGN.md  config.toml  opencode.json  run-mcp.sh
.cargo/: config.toml
devlog/: 2026-06-29_3d-normal-from-height-field.md  2026-06-29_architecture-doc-phase2-prep.md  2026-06-29_blur-compute-and-pipeline.md  2026-06-29_fresnel-edge-glow-tuning.md  2026-06-29_initial-project-docs.md  2026-06-29_naga-oil-import-fix.md  2026-06-29_phase1-demo-integration.md  2026-06-29_phase2-material-effects.md  2026-06-29_phase3-surface-and-depth.md  2026-06-29_refraction-fix-and-config.md  2026-06-29_shader-infrastructure-naga-oil.md  2026-06-29_shader-loader-render-init.md  2026-06-29_shader-param-tuning-and-bevel-fix.md  2026-06-29_shadow-debug-and-config-exposure.md  2026-06-29_type-system-refactoring.md  2026-06-29_workspace-skeleton-core.md  2026-06-30_phase4-interaction-debug.md  2026-06-30_phase5-parameter-system.md  2026-06-30_phase5-scroll-debug-and-fix.md  2026-07-01_cli-tool-migration.md  2026-07-01_mcp-design.md  2026-07-01_mcp-implementation.md  2026-07-01_mcp-schema-fix.md
liquidglass0-cli/: Cargo.toml
liquidglass0-cli/src/: cli.rs  headless.rs  main.rs
liquidglass0-core/: Cargo.toml
liquidglass0-core/src/: interaction.rs  lib.rs  light.rs  material.rs  panel.rs  params.rs  scene.rs  sdf.rs
liquidglass0-demo/: Cargo.toml
liquidglass0-demo/src/: app.rs  config.rs  main.rs  tune.rs
liquidglass0-mcp/: Cargo.toml
liquidglass0-mcp/src/: capture.rs  headless.rs  main.rs  server.rs
liquidglass0-render/: Cargo.toml
liquidglass0-render/src/: config.rs  input.rs  lib.rs  renderer.rs  shader.rs
shaders/common/: fullscreen_triangle.wgsl  glass_material.wgsl  sdf.wgsl
shaders/compute/: blur_horizontal.wgsl  blur_vertical.wgsl  refract.wgsl
shaders/fragment/: composite.wgsl
