[package]
name = "liquidglass0-cli"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[[bin]]
name = "lg0"
path = "src/main.rs"

[dependencies]
liquidglass0-core = { path = "../liquidglass0-core" }
liquidglass0-render = { path = "../liquidglass0-render" }
wgpu = { workspace = true }
glam = { workspace = true }

clap = { version = "4.6.1", features = ["derive"] }
pollster = "0.4.0"

image = "0.25.10"
half = "2.7.1"

toml = "1.1.2"
toml_edit = "0.23"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
