[package]
name = "liquidglass0-demo"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[dependencies]
glam = { workspace = true }
liquidglass0-core = { path = "../liquidglass0-core" }
liquidglass0-render = { path = "../liquidglass0-render" }
wgpu = { workspace = true }
winit = "0.30"
pollster = "0.4"
toml = "1.1.2"
serde = { version = "1.0.228", features = ["derive"] }
toml_edit = { version = "0.23", features = ["serde"] }
gpui = { version = "0.2.2", features = ["runtime_shaders"] }
